--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -2,28 +2,28 @@ name: PAloAltoKAIR
 
 on:
   schedule: 
-   - cron: '0 0 * * 2' # Run every ??????? need to be reviewed
+   - cron: '0 0 * * 5' # Run every Friday
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+        
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    - name: Install poetry
-      uses: abatilo/actions-poetry@v2.0.0
-      with:
-        poetry-version: 1.4.2
+
+
     - name: Install dependencies
       run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          # pip install -r requirements.txt
+          # pip install --upgrade google-api-python-client google-auth-httplib2 google-auth-oauthlib gspread
+
+
     - name: Run discovered weekly
       # env:
         # CLIENT_ID: ${{ secrets.CLIENT_ID }}
-        
       run: |
         python PAloAltoKAIR.py
